--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Manual Input">
     <link rel="icon" href="./img/favicon.ico">
 
-    <title>Semanttica</title>
+    <title>Manual Input | Semanttica</title>
     <link href="./css/bootstrap.min.css" rel="stylesheet">
     <link href="./css/cover.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/font-awesome.min.css">
